fixes overflow on index.html page

--- a/public/main.css
+++ b/public/main.css
@@ -126,7 +126,7 @@ h2 {
 
 .payment-progress {
   margin-top: 20px;
-  height:250px;
+  height:260px;
 }
 
 .fake-table {
